// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TypeaheadInputMulti> Default story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Disabled story renders snapshot 1`] = `
<div
  className="rbt-input-multi disabled form-control rbt-input"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-disabled"
    >
      <div
        className="rbt-token-label"
      >
        Alaska
      </div>
    </div>
    <div
      className="rbt-token rbt-token-disabled"
    >
      <div
        className="rbt-token-label"
      >
        Arizona
      </div>
    </div>
    <div
      className="rbt-token rbt-token-disabled"
    >
      <div
        className="rbt-token-label"
      >
        Arkansas
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        disabled={true}
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> FocusState story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input focus"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Invalid story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input is-invalid focus"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Large story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input form-control-lg"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Small story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input form-control-sm"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Valid story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input is-valid focus"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> WithHint story renders snapshot 1`] = `
<div
  className="rbt-input-multi form-control rbt-input"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="rbt-input-wrapper"
  >
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      className="rbt-token rbt-token-removeable"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        className="close btn-close rbt-close rbt-token-remove-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          aria-hidden="true"
          className="rbt-close-content"
        >
          ×
        </span>
        <span
          className="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        className="rbt-input-main"
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": 0,
            "boxShadow": "none",
            "cursor": "inherit",
            "outline": "none",
            "padding": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
        value="cali"
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value="california"
      />
    </div>
  </div>
</div>
`;
